--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vuelidate/validators": "^2.0.4",
     "axios": "^1.5.1",
     "cz-conventional-changelog": "^3.3.0",
+    "flowbite": "^2.0.0",
     "mitt": "^3.0.1",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.0",
