--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@commitlint/cli": "^18.2.0",
     "@commitlint/config-conventional": "^18.1.0",
     "@tailwindcss/forms": "^0.5.6",
+    "@types/intl": "^1.2.2",
     "@vitejs/plugin-vue": "^4.2.3",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.52.0",
@@ -38,10 +39,10 @@
     "postcss": "^8.4.31",
     "prettier": "3.0.3",
     "tailwindcss": "^3.3.3",
-    "typescript": "^5.0.2",
+    "typescript": "latest",
     "vite": "^4.4.5",
     "vitest": "^0.34.6",
-    "vue-tsc": "^1.8.5"
+    "vue-tsc": "latest"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
